# Shader-for-RealSense

./: CMakeLists.txt  README.md
include/: depth_converter.h  frame_types.h  realsense_capture.h  renderer.h
src/: main.cpp
src/capture/: realsense_capture.cpp
src/processing/: depth_converter.cpp
src/rendering/: renderer.cpp
src/shaders/: depth_grayscale.glsl  depth_variance.glsl  object_detection.glsl
src/shaders/ripple/: display_test.glsl  ripple_effect.glsl  sim_test.glsl  simulation_shader.glsl
